--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="row">
-          <button class="btn" routerLink="/profile" routerLinkActive="active-link"
+          <button class="btn" routerLink="/main/profile" routerLinkActive="active-link"
             [routerLinkActiveOptions]="{ exact: true }">
             {{ "profilePage" | translate }}
           </button>
