--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -136,7 +136,12 @@
           </button>
         </div>
         <div class="button">
-          <button class="btn" (click)="resetForm()">
+          <button
+            data-bs-toggle="modal"
+            class="btn"
+            data-bs-target="#modalConfirm"
+            (click)="resetForm()"
+          >
             {{ "reset" | translate }}
           </button>
         </div>
