--- a/src/app/components/confirm-modal/confirm-modal.component.html
+++ b/src/app/components/confirm-modal/confirm-modal.component.html
@@ -1,9 +1,9 @@
-<div class="modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
+<div id="modalConfirm" class="modal modal-centered fade" tabindex="-1">
+    <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" (click)="close()" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
