--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -9,16 +9,10 @@
       </div>
       <div class="row row2">
         <h1>{{ "cashiers" | translate }}</h1>
-        <mat-table
-          [dataSource]="cashierList"
-          class="mat-table mat-elevation-z8"
-        >
+        <mat-table [dataSource]="cashierList" class="mat-table mat-elevation-z8">
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
-            <mat-cell
-              *matCellDef="let cashier"
-              (click)="chooseCashier(cashier)"
-            >
+            <mat-cell *matCellDef="let cashier" (click)="chooseCashier(cashier)">
               {{ cashier.id }}
             </mat-cell>
           </ng-container>
@@ -27,10 +21,7 @@
             <mat-header-cell *matHeaderCellDef>
               {{ "locality" | translate }}
             </mat-header-cell>
-            <mat-cell
-              *matCellDef="let cashier"
-              (click)="chooseCashier(cashier)"
-            >
+            <mat-cell *matCellDef="let cashier" (click)="chooseCashier(cashier)">
               {{ cashier.locality }}
             </mat-cell>
           </ng-container>
@@ -41,14 +32,11 @@
       </div>
     </div>
     <div class="col center">
-      <div
-        class="row"
-        style="height: 50%; border: 2px solid #005540; border-bottom: none"
-      >
+      <div class="row" style="height: 50%; border: 2px solid #005540; border-bottom: none">
         <div class="col space">
           <div class="row align">
             <label>ID</label>
-            <input type="text" formControlName="id" />
+            <input type="text" formControlName="id" id="idInput"/>
           </div>
           <div class="row align">
             <label>{{ "address" | translate }}</label>
@@ -78,48 +66,37 @@
           </div>
           <div class="row align">
             <label>{{ "available" | translate }}</label>
-            <select formControlName="available" [(ngModel)]="selectedValue" (ngModelChange)="onSelectedChange()">
-              <option value="opc1">{{ "yes" | translate }}</option>
-              <option value="opc2">{{ "no" | translate }}</option>
+            <select formControlName="available" [(ngModel)]="selectedValue"> <!-- (ngModelChange)="onSelectedChange()">-->
+              <option value="true">{{ "yes" | translate }}</option>
+              <option value="false">{{ "no" | translate }}</option>
             </select>
           </div>
         </div>
       </div>
 
-      <div
-        class="row center"
-        style="
+      <div class="row center" style="
           border: 2px solid #005540;
           border-top: none;
           border-bottom: none;
           padding-bottom: 2%;
           height: 120px;
-        "
-      >
+        ">
         <ng-template [ngIf]="!noDisponible" [ngIfElse]="notImage">
           <img (click)="changeImage()" [src]="atmPhoto" />
         </ng-template>
         <ng-template #notImage>
           <div class="image">
-            <img
-              (click)="changeImage()"
-              [src]="notFoundPhoto"
-              class="card-img-top"
-              alt="Image not found"
-            />
+            <img (click)="changeImage()" [src]="notFoundPhoto" class="card-img-top" alt="Image not found" />
           </div>
         </ng-template>
       </div>
 
-      <div
-        class="row space"
-        style="
+      <div class="row space" style="
           border: 2px solid #005540;
           border-top: none;
           padding-bottom: 2%;
           padding-top: 1%;
-        "
-      >
+        ">
         <div class="button">
           <button class="btn" (click)="createOrUpdateCashier()">
             {{ "update" | translate }}
