--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -9,10 +9,16 @@
       </div>
       <div class="row row2">
         <h1>{{ "cashiers" | translate }}</h1>
-        <mat-table [dataSource]="cashierList" class="mat-table mat-elevation-z8">
+        <mat-table
+          [dataSource]="cashierList"
+          class="mat-table mat-elevation-z8"
+        >
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
-            <mat-cell *matCellDef="let cashier" (click)="chooseCashier(cashier)">
+            <mat-cell
+              *matCellDef="let cashier"
+              (click)="chooseCashier(cashier)"
+            >
               {{ cashier.id }}
             </mat-cell>
           </ng-container>
@@ -21,7 +27,10 @@
             <mat-header-cell *matHeaderCellDef>
               {{ "locality" | translate }}
             </mat-header-cell>
-            <mat-cell *matCellDef="let cashier" (click)="chooseCashier(cashier)">
+            <mat-cell
+              *matCellDef="let cashier"
+              (click)="chooseCashier(cashier)"
+            >
               {{ cashier.locality }}
             </mat-cell>
           </ng-container>
@@ -32,11 +41,14 @@
       </div>
     </div>
     <div class="col center">
-      <div class="row" style="height: 50%; border: 2px solid #005540; border-bottom: none">
+      <div
+        class="row"
+        style="height: 50%; border: 2px solid #005540; border-bottom: none"
+      >
         <div class="col space">
           <div class="row align">
             <label>ID</label>
-            <input type="text" formControlName="id" id="idInput"/>
+            <input type="text" formControlName="id" id="idInput" />
           </div>
           <div class="row align">
             <label>{{ "address" | translate }}</label>
@@ -65,8 +77,9 @@
             <input type="text" formControlName="balance" />
           </div>
           <div class="row align">
-            <label>{{ "available" | translate }}</label>
-            <select formControlName="available" [(ngModel)]="selectedValue"> <!-- (ngModelChange)="onSelectedChange()">-->
+            <label>{{ "cashierAvailable" | translate }}</label>
+            <select formControlName="available" [(ngModel)]="selectedValue">
+              <!-- (ngModelChange)="onSelectedChange()">-->
               <option value="true">{{ "yes" | translate }}</option>
               <option value="false">{{ "no" | translate }}</option>
             </select>
@@ -74,31 +87,46 @@
         </div>
       </div>
 
-      <div class="row center" style="
+      <div
+        class="row center"
+        style="
           border: 2px solid #005540;
           border-top: none;
           border-bottom: none;
           padding-bottom: 2%;
           height: 120px;
-        ">
+        "
+      >
         <ng-template [ngIf]="!noDisponible" [ngIfElse]="notImage">
           <img (click)="changeImage()" [src]="atmPhoto" />
         </ng-template>
         <ng-template #notImage>
           <div class="image">
-            <img (click)="changeImage()" [src]="notFoundPhoto" class="card-img-top" alt="Image not found" />
+            <img
+              (click)="changeImage()"
+              [src]="notFoundPhoto"
+              class="card-img-top"
+              alt="Image not found"
+            />
           </div>
         </ng-template>
       </div>
 
-      <div class="row space" style="
+      <div
+        class="row space"
+        style="
           border: 2px solid #005540;
           border-top: none;
           padding-bottom: 2%;
           padding-top: 1%;
-        ">
+        "
+      >
         <div class="button">
-          <button [disabled]="updateBtn" class="btn" (click)="createOrUpdateCashier()">
+          <button
+            [disabled]="updateBtn"
+            class="btn"
+            (click)="createOrUpdateCashier()"
+          >
             {{ "update" | translate }}
           </button>
         </div>
@@ -108,7 +136,11 @@
           </button>
         </div>
         <div class="button">
-          <button [disabled]="newBtn" class="btn" (click)="createOrUpdateCashier()">
+          <button
+            [disabled]="newBtn"
+            class="btn"
+            (click)="createOrUpdateCashier()"
+          >
             {{ "new" | translate }}
           </button>
         </div>
