--- a/src/app/components/float-button/float-button.component.html
+++ b/src/app/components/float-button/float-button.component.html
@@ -53,7 +53,7 @@
         <div class="row">
           <button
             class="btn"
-            routerLink="/profile"
+            routerLink="/main/profile"
             routerLinkActive="active-link"
             [routerLinkActiveOptions]="{ exact: true }"
           >
