--- a/src/app/components/qr/qr.component.scss
+++ b/src/app/components/qr/qr.component.scss
@@ -1,44 +1,44 @@
-.myQR{
+.myQR {
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: auto;
-  margin-top: 30px;
+  padding-top: 5%;
 }
 
-.header{
+.header {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
 }
-  
-.QR{
+
+.QR {
   background-color: rgb(255, 255, 255);
   margin: auto;
   text-align: center;
 }
 
-.logo{
+.logo {
   margin: auto;
   margin-bottom: 40px;
 }
 
-.time{
+.time {
   font-size: x-large;
   font-family: inherit;
   font-weight: bold;
   color: dimgrey;
 }
 
-.text{
+.text {
   text-align: justify;
   font-size: medium;
   font-family: inherit;
   margin: 8px 0% 10px 0%;
 }
 
-.divisor{
+.divisor {
   background: #005442;
   margin-left: 10%;
   margin-right: 10%;
@@ -47,15 +47,37 @@
   opacity: 0.9;
 }
 
-.qrContainer{
+.qrContainer {
   align-self: center;
   margin: 10% 0% 10% 0%;
 }
 
-@media only screen and (min-width: 1024px){
-  .qrContainer{
+@media (max-width: 500px) {
+  .myQR {
+    padding-top: 20%;
+  }
+}
+
+@media (min-width: 500px) and (max-width: 800px) {
+  .myQR {
+    padding-top: 13%;
+  }
+}
+
+@media (min-width: 800px) and (max-width: 1200px) {
+  .myQR {
+    padding-top: 10%;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .qrContainer {
     align-self: center;
     margin: 10px 0% 10px 0%;
+  }
+
+  .myQR {
+    padding-top: 8%;
   }
 }
 
@@ -64,21 +86,21 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width:100%;
-  height:100%;
-  z-index:10001;
+  width: 100%;
+  height: 100%;
+  z-index: 10001;
   background-color: rgba($color: #000000, $alpha: 0.5);
 }
 
-.btn{
+.btn {
   margin: 3% 0% 0% 3%;
 }
 
-.b{
+.b {
   background-color: #005442;
   border-color: #005442;
 }
 
-.btn-primary{
+.btn-primary {
   background-color: #005442;
 }
