admin panel post service fixed

--- a/src/app/components/qr/qr.component.html
+++ b/src/app/components/qr/qr.component.html
@@ -23,14 +23,14 @@
         <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="modal" data-bs-target="#closeModal">
             {{"cancel" | translate}}
         </button>
-        <button type="button" class="btn btn-primary btn-lg" routerLink="/main/map">
+        <button type="button" class="btn btn-primary btn-lg" routerLink="/main/map" data-bs-toggle="modal" data-bs-target="#closeModal">
             {{"end" | translate}}
         </button>
     </div>
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="closeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="closeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-body">
@@ -42,4 +42,4 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
