--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -15,8 +15,21 @@
   width: 100%;
 }
 
+p {
+  width: 65%;
+}
+
+.logo {
+  width: 22%;
+}
+
 .row {
   justify-content: center;
+  &.logo {
+    width: 100%;
+    position: fixed;
+    top: 20%;
+  }
 }
 
 .card {
@@ -82,9 +95,17 @@
     width: 60%;
   }
 
+  .logo {
+    width: 50%;
+  }
+
   .lang {
     right: 19%;
     left: 66%;
+  }
+
+  p {
+    width: 70%;
   }
 
   .card {
@@ -96,6 +117,14 @@
 @media only screen and (min-width: 501px) and (max-width: 571px) {
   .form {
     width: 60%;
+  }
+
+  p {
+    width: 65%;
+  }
+
+  .logo {
+    width: 45%;
   }
 
   .lang {
@@ -114,6 +143,14 @@
     width: 60%;
   }
 
+  p {
+    width: 60%;
+  }
+
+  .logo {
+    width: 35%;
+  }
+
   .lang {
     right: 12%;
     left: 76%;
@@ -130,6 +167,14 @@
     width: 40%;
   }
 
+  p {
+    width: 65%;
+  }
+
+  .logo {
+    width: 30%;
+  }
+
   .lang {
     right: 9%;
     left: 82%;
@@ -142,6 +187,14 @@
 
 @media only screen and (min-width: 991px) and (max-width: 1023px) {
   .form {
+    width: 30%;
+  }
+
+  p {
+    width: 65%;
+  }
+
+  .logo {
     width: 30%;
   }
 
@@ -161,6 +214,10 @@
     left: 89%;
   }
 
+  p {
+    width: 55%;
+  }
+
   .card {
     width: 11%;
   }
@@ -169,6 +226,21 @@
 @media only screen and (max-width: 430px) {
   .background {
     background: none;
+  }
+
+  p {
+    width: 100%;
+  }
+
+  .row {
+    &.logo {
+      top: 10%;
+    }
+  }
+
+  .logo {
+    width: 50%;
+    left: 3%;
   }
 
   .card {
@@ -182,14 +254,14 @@
     position: fixed;
     top: 85%;
     right: 50%;
-    left: 40%;
+    left: 38%;
     width: 25%;
     text-align: center;
   }
 
   .form {
     width: 60%;
-    height: 100%;
+    height: 75%;
   }
 
   .window {
