--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -24,7 +24,7 @@
       </h5>
     </ng-template>
     <button type="button" class="bg-primary text-white border border-0 transactionBtn" *ngIf="cashier.available"
-      (click)="openModal(cashier)" data-bs-target="#myModal">
+      (click)="openTransaction(cashier)">
       {{ "transactions" | translate }}
     </button>
   </div>
