--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -10,4 +10,4 @@
 <div id="map" class="map-container"></div>
 <app-searchbar></app-searchbar>
 <app-radio-slider class="overlaySlider"></app-radio-slider>
-<app-modal-transaction #tdetail></app-modal-transaction>
+<!-- <app-modal-transaction #tdetail></app-modal-transaction> -->
