map click cashier and some corrections in transactions

--- a/src/app/components/qr/qr.component.html
+++ b/src/app/components/qr/qr.component.html
@@ -20,26 +20,8 @@
     </div>
     <hr class="divisor">
     <div class="botton">
-        <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="modal" data-bs-target="#closeModal">
-            {{"cancel" | translate}}
-        </button>
-        <button type="button" class="btn btn-primary btn-lg" routerLink="/main/map" data-bs-toggle="modal" data-bs-target="#closeModal">
+        <button type="button" class="btn btn-primary btn-lg" routerLink="/main/map" >
             {{"end" | translate}}
         </button>
     </div>
 </div>
-
-<!-- Modal -->
-<!-- <div class="modal fade" id="closeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-body">
-            {{"cancelText" | translate}}
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-primary" routerLink="/main/map" data-bs-dismiss="modal">{{"confirm" | translate}}</button>
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{"cancel" | translate}}</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
