--- a/src/app/components/transaction/transaction.component.html
+++ b/src/app/components/transaction/transaction.component.html
@@ -1,19 +1,18 @@
-<div>
-    <div>
-        <h1>{{"operation" | translate}}</h1>
-        <button type="button" routerLink="/main/map"></button>
-    </div>
-    <div>
-        <ng-template [ngIf]="cashier != null" [ngIfElse]="notImage">
-            <img *ngIf="cashier.img != null; else notPhoto" [src]="decodeImg(cashier.img)" alt="Image not found"
-                    class="image">
-            <ng-template #notPhoto>
-                <img src="../../../assets/icons/image-not-found.png" class="card-img-top image" alt="Image not found" />    
-            </ng-template>
+<mat-card class="transaction-card">
+    <mat-card-header>
+      <mat-card-title>{{"operation" | translate}}</mat-card-title>
+    </mat-card-header>
+    <ng-template [ngIf]="cashier != null" [ngIfElse]="notImage">
+        <img mat-card-image *ngIf="cashier.img != null; else notPhoto" [src]="decodeImg(cashier.img)" alt="Image not found"
+                class="image">
+        <ng-template #notPhoto>
+            <img mat-card-image src="../../../assets/icons/image-not-found.png" class="card-img-top image" alt="Image not found" />    
         </ng-template>
-        <ng-template #notImage>
-            <img src="../../../assets/icons/image-not-found.png" class="card-img-top image" alt="Image not found" />
-        </ng-template>
+    </ng-template>
+    <ng-template #notImage>
+        <img mat-card-image src="../../../assets/icons/image-not-found.png" class="card-img-top image" alt="Image not found" />
+    </ng-template>
+    <mat-card-content>
         <hr>
         <div class="input-group">
             <input type="number" class="form-control" aria-label="Dollar amount (with dot and two decimal places)" 
@@ -21,9 +20,9 @@
         </div>
         <p>Min. 5.00 - Max. 3000.00</p>
         <p *ngIf="!isValid" style="color: red;">{{"noAmount" | translate}}</p>
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-primary" (click)="doTransaction(true)">{{'deposit' | translate}}</button>
-        <button type="button" class="btn btn-primary" (click)="doTransaction(false)">{{'draw' | translate}}</button>
-    </div>
-</div>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button type="button" (click)="doTransaction(true)">{{'deposit' | translate}}</button>
+        <button mat-button type="button" (click)="doTransaction(false)">{{'draw' | translate}}</button>
+    </mat-card-actions>
+  </mat-card>
