--- a/src/app/components/transaction/transaction.component.html
+++ b/src/app/components/transaction/transaction.component.html
@@ -1,28 +1,35 @@
-<mat-card class="transaction-card">
-    <mat-card-header>
-      <mat-card-title>{{"operation" | translate}}</mat-card-title>
-    </mat-card-header>
-    <ng-template [ngIf]="cashier != null" [ngIfElse]="notImage">
-        <img mat-card-image *ngIf="cashier.img != null; else notPhoto" [src]="decodeImg(cashier.img)" alt="Image not found"
-                class="image">
-        <ng-template #notPhoto>
-            <img mat-card-image src="../../../assets/icons/image-not-found.png" class="card-img-top image" alt="Image not found" />    
-        </ng-template>
-    </ng-template>
-    <ng-template #notImage>
-        <img mat-card-image src="../../../assets/icons/image-not-found.png" class="card-img-top image" alt="Image not found" />
-    </ng-template>
-    <mat-card-content>
-        <hr>
-        <div class="input-group">
-            <input type="number" class="form-control" aria-label="Dollar amount (with dot and two decimal places)" 
-                    regexInput="^[0-9]*\.[0-9]{2}$ or ^[0-9]*\.[0-9][0-9]$" [(ngModel)]="amount" required>
-        </div>
-        <p>Min. 5.00 - Max. 3000.00</p>
-        <p *ngIf="!isValid" style="color: red;">{{"noAmount" | translate}}</p>
-    </mat-card-content>
-    <mat-card-actions>
-        <button mat-button type="button" (click)="doTransaction(true)">{{'deposit' | translate}}</button>
-        <button mat-button type="button" (click)="doTransaction(false)">{{'draw' | translate}}</button>
-    </mat-card-actions>
-  </mat-card>
+<div class="main">
+    <div class="h100">
+        <mat-card class="transaction-card">
+            <mat-card-header>
+                <mat-card-title>
+                    <h1>{{"operation" | translate}}</h1>
+                    <button></button>
+                </mat-card-title>
+            </mat-card-header>
+            <div>
+                <ng-template [ngIf]="!isImgEmpty" [ngIfElse]="notImage">
+                    <img mat-card-image [src]="decodeImg(cashier.img)" alt="Image not found">
+                </ng-template>
+                <ng-template #notImage>
+                    <img mat-card-image src="../../../assets/icons/image-not-found.png" alt="Image not found" />
+                </ng-template>
+            </div>
+            <mat-card-content>
+                <hr>
+                <div class="input-group">
+                    <input type="number" class="form-control"
+                        aria-label="Dollar amount (with dot and two decimal places)"
+                        regexInput="^[0-9]*\.[0-9]{2}$ or ^[0-9]*\.[0-9][0-9]$" [(ngModel)]="amount" required>
+                </div>
+                <p>Min. 5.00 - Max. 3000.00</p>
+                <p *ngIf="!isValid" style="color: red;">{{"noAmount" | translate}}</p>
+            </mat-card-content>
+            <mat-card-actions>
+                <button mat-raised-button color="primary" (click)="doTransaction(true)">{{'deposit' |
+                    translate}}</button>
+                <button mat-raised-button color="primary" (click)="doTransaction(false)">{{'draw' | translate}}</button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
+</div>
