--- a/src/app/components/profile-page/profile-page.component.scss
+++ b/src/app/components/profile-page/profile-page.component.scss
@@ -50,6 +50,7 @@
   align-items: center;
   width: 80%;
   height: 80%;
+  opacity: 0.8;
 }
 
 .card-body {
@@ -72,7 +73,7 @@ input {
     background: none;
   }
 
-  .bi{
+  .bi {
     width: 30%;
   }
 
