--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="col">
       <div class="row row1">
-        <h1>
+        <h2>
           {{ "admin" | translate }}:
-          <!-- {{ user.dni }} -->
-        </h1>
+          {{ user.dni }}
+        </h2>
       </div>
       <div class="row row2">
         <h1>{{ "cashiers" | translate }}</h1>
