--- a/src/app/components/qr/qr.component.scss
+++ b/src/app/components/qr/qr.component.scss
@@ -4,6 +4,12 @@
   justify-content: center;
   margin: auto;
   padding-top: 5%;
+  width: 60%;
+}
+
+.botton{
+  display: flex;
+  justify-content: center;
 }
 
 .header {
