--- a/src/app/components/transaction/transaction.component.scss
+++ b/src/app/components/transaction/transaction.component.scss
@@ -6,7 +6,7 @@
 }
 
 .body {
-    width: 550px;
+    width: 600px;
     border: 2px solid #005540;
     border-radius: 2%;
     padding: 20px;
@@ -17,6 +17,15 @@
     justify-content: space-between;
     padding-bottom: 10px;
     color: #005540;
+
+    button {
+        background-color: #005540;
+        width: 30px;
+        height: 30px;
+        border: none;
+        border-radius: 10%;
+        color: white;
+    }
 }
 
 .imgBody {
@@ -34,7 +43,8 @@
     justify-content: space-evenly;
 
     button {
-        height: 45px;
-        width: 100px;    
+        width: 105px;
+        background-color: #005540;
+        color: white;  
     }
 }
