--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,11 @@ body {
   line-height: 30px;
   background-color: rgba(240, 248, 255, 0.653);
 }
+
+.leaflet-bottom .leaflet-control {
+  margin-bottom: 30px;
+}
+
 html,
 body {
   height: 100%;
