admin panel inputs type data validation

--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -2,23 +2,14 @@
   <div class="container">
     <div class="col">
       <div class="row row1">
-        <h2>
-          {{ "admin" | translate }}:
-          {{ user.dni }}
-        </h2>
+        <h2>{{ "admin" | translate }}: {{ user.dni }}</h2>
       </div>
       <div class="row row2">
         <h1>{{ "cashiers" | translate }}</h1>
-        <mat-table
-          [dataSource]="cashierList"
-          class="mat-table mat-elevation-z8"
-        >
+        <mat-table [dataSource]="cashierList" class="mat-table mat-elevation-z8">
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
-            <mat-cell
-              *matCellDef="let cashier"
-              (click)="chooseCashier(cashier)"
-            >
+            <mat-cell *matCellDef="let cashier" (click)="chooseCashier(cashier)">
               {{ cashier.id }}
             </mat-cell>
           </ng-container>
@@ -27,10 +18,7 @@
             <mat-header-cell *matHeaderCellDef>
               {{ "locality" | translate }}
             </mat-header-cell>
-            <mat-cell
-              *matCellDef="let cashier"
-              (click)="chooseCashier(cashier)"
-            >
+            <mat-cell *matCellDef="let cashier" (click)="chooseCashier(cashier)">
               {{ cashier.locality }}
             </mat-cell>
           </ng-container>
@@ -41,10 +29,7 @@
       </div>
     </div>
     <div class="col center">
-      <div
-        class="row"
-        style="height: 50%; border: 2px solid #005540; border-bottom: none"
-      >
+      <div class="row" style="height: 50%; border: 2px solid #005540; border-bottom: none">
         <div class="col space">
           <div class="row align">
             <label>ID</label>
@@ -56,7 +41,7 @@
           </div>
           <div class="row align">
             <label>{{ "cp" | translate }}</label>
-            <input type="text" formControlName="cp" />
+            <input type="number" formControlName="cp" />
           </div>
           <div class="row align">
             <label>{{ "locality" | translate }}</label>
@@ -66,15 +51,15 @@
         <div class="col space">
           <div class="row align">
             <label>{{ "latitude" | translate }}</label>
-            <input type="text" formControlName="lattitude" />
+            <input type="number" formControlName="lattitude" />
           </div>
           <div class="row align">
             <label>{{ "longitude" | translate }}</label>
-            <input type="text" formControlName="longitude" />
+            <input type="number" formControlName="longitude" />
           </div>
           <div class="row align">
             <label>{{ "balance" | translate }}</label>
-            <input type="text" formControlName="balance" />
+            <input type="number" formControlName="balance" />
           </div>
           <div class="row align">
             <label>{{ "cashierAvailable" | translate }}</label>
@@ -87,58 +72,34 @@
         </div>
       </div>
 
-      <div
-        class="row center"
-        style="
-          border: 2px solid #005540;
-          border-top: none;
-          border-bottom: none;
-          padding-bottom: 2%;
-          height: 120px;
-        "
-      >
+      <div class="row center" style=" border: 2px solid #005540; border-top: none; border-bottom: none;
+          padding-bottom: 2%; height: 120px;">
         <ng-template [ngIf]="!noDisponible" [ngIfElse]="notImage">
           <img (click)="changeImage()" [src]="atmPhoto" />
         </ng-template>
         <ng-template #notImage>
           <div class="image">
-            <img
-              (click)="changeImage()"
-              [src]="notFoundPhoto"
-              class="card-img-top"
-              alt="Image not found"
-            />
+            <img (click)="changeImage()" [src]="notFoundPhoto" class="card-img-top" alt="Image not found" />
           </div>
         </ng-template>
       </div>
 
-      <div
-        class="row space"
-        style="
-          border: 2px solid #005540;
-          border-top: none;
-          padding-bottom: 2%;
-          padding-top: 1%;
-        "
-      >
+      <div class="row space" style=" border: 2px solid #005540; border-top: none; padding-bottom: 2%;
+          padding-top: 1%;">
         <div class="button">
-          <button [disabled]="!this.formCashier.valid || this.updateBtn" 
-                  class="btn" (click)="createOrUpdateCashier()">
+          <button [disabled]="!this.formCashier.valid || this.updateBtn" class="btn" (click)="createOrUpdateCashier()">
             {{ "update" | translate }}
           </button>
         </div>
         <div class="button">
-          <button [disabled]="!this.formCashier.valid || this.deleteBtn"
-                  class="btn" (click)="deleteCashier()">
+          <button [disabled]="!this.formCashier.valid || this.deleteBtn" class="btn" (click)="deleteCashier()">
             {{ "delete" | translate }}
           </button>
         </div>
         <div class="button">
           <button [disabled]="!this.formCashier.valid && 
                   (this.formCashier.get('id').value !== null || this.formCashier.get('id').value !== '')
-                  || this.chooseIdFlag"
-                   
-                  class="btn" (click)="createOrUpdateCashier()">
+                  || this.chooseIdFlag" class="btn" (click)="createOrUpdateCashier()">
             {{ "new" | translate }}
           </button>
         </div>
