--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+<div>
 <nav class="navbar bg-body-tertiary fixed-top">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -80,5 +81,6 @@
     </div>
   </div>
 </nav>
+</div>
 <app-float-button></app-float-button>
 <router-outlet></router-outlet>
