--- a/src/app/components/qr/qr.component.scss
+++ b/src/app/components/qr/qr.component.scss
@@ -26,8 +26,9 @@
 }
 
 .logo {
+  position: relative;
+  bottom: 15px;
   margin: auto;
-  margin-bottom: 40px;
 }
 
 .time {
@@ -55,7 +56,7 @@
 
 .qrContainer {
   align-self: center;
-  margin: 10% 0% 10% 0%;
+  margin: 2% 0% 2% 0%;
 }
 
 @media (max-width: 500px) {
