--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -128,6 +128,6 @@ nav {
   padding: 5px;
 }
 
-.offcanvas.offcanvas-start {
-  top: 61px;
-}
+// .offcanvas.offcanvas-start {
+//   top: 61px;
+// }
