--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -1,114 +1,100 @@
 <form class="form-control" [formGroup]="formCashier">
   <div class="container">
-    <div class="col">
-      <div class="row row1">
-        <h2>{{ "admin" | translate }}: {{ user.dni }}</h2>
-      </div>
-      <div class="row row2">
-        <h1>{{ "cashiers" | translate }}</h1>
-        <mat-table [dataSource]="cashierList" class="mat-table mat-elevation-z8">
-          <ng-container matColumnDef="id">
-            <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
-            <mat-cell *matCellDef="let cashier" (click)="chooseCashier(cashier)">
-              {{ cashier.id }}
-            </mat-cell>
-          </ng-container>
-
-          <ng-container matColumnDef="locality">
-            <mat-header-cell *matHeaderCellDef>
-              {{ "locality" | translate }}
-            </mat-header-cell>
-            <mat-cell *matCellDef="let cashier" (click)="chooseCashier(cashier)">
-              {{ cashier.locality }}
-            </mat-cell>
-          </ng-container>
-
-          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-          <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-        </mat-table>
-      </div>
+    <div class="admin">
+      <h2>{{ "admin" | translate }}: {{user.dni}}</h2>
     </div>
-    <div class="col center">
-      <div class="row" style="height: 50%; border: 2px solid #005540; border-bottom: none">
-        <div class="col space">
-          <div class="row align">
-            <label>ID</label>
-            <input type="text" formControlName="id" id="idInput" />
-          </div>
-          <div class="row align">
-            <label>{{ "address" | translate }}</label>
-            <input type="text" formControlName="address" />
-          </div>
-          <div class="row align">
-            <label>{{ "cp" | translate }}</label>
-            <input type="number" formControlName="cp" />
-          </div>
-          <div class="row align">
-            <label>{{ "locality" | translate }}</label>
-            <input type="text" formControlName="locality" />
-          </div>
+
+    <div class="left-section">
+      <h2>{{ "cashiers" | translate }}</h2>
+      <mat-table [dataSource]="cashierList" class="mat-table mat-elevation-z8">
+        <ng-container matColumnDef="id">
+          <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
+          <mat-cell *matCellDef="let cashier" (click)="chooseCashier(cashier)">
+            {{ cashier.id }}
+          </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="locality">
+          <mat-header-cell *matHeaderCellDef>
+            {{ "locality" | translate }}
+          </mat-header-cell>
+          <mat-cell *matCellDef="let cashier" (click)="chooseCashier(cashier)">
+            {{ cashier.locality }}
+          </mat-cell>
+        </ng-container>
+
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+      </mat-table>
+    </div>
+
+    <div class="right-section">
+      <h2>{{ "cashiersData" | translate }}</h2>
+      <div class="form-grid">
+        <div class="form-group">
+          <label for="input1">ID</label>
+          <input type="text" formControlName="id" id="idInput">
         </div>
-        <div class="col space">
-          <div class="row align">
-            <label>{{ "latitude" | translate }}</label>
-            <input type="number" formControlName="lattitude" />
-          </div>
-          <div class="row align">
-            <label>{{ "longitude" | translate }}</label>
-            <input type="number" formControlName="longitude" />
-          </div>
-          <div class="row align">
-            <label>{{ "balance" | translate }}</label>
-            <input type="number" formControlName="balance" />
-          </div>
-          <div class="row align">
-            <label>{{ "cashierAvailable" | translate }}</label>
-            <select formControlName="available" [(ngModel)]="selectedValue">
-              <!-- (ngModelChange)="onSelectedChange()">-->
-              <option value="true">{{ "yes" | translate }}</option>
-              <option value="false">{{ "no" | translate }}</option>
-            </select>
-          </div>
+        <div class="form-group">
+          <label>{{ "cashierAvailable" | translate }}</label>
+          <select formControlName="available" [(ngModel)]="selectedValue">
+            <option value="true">{{ "yes" | translate }}</option>
+            <option value="false">{{ "no" | translate }}</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label>{{ "cp" | translate }}</label>
+          <input type="number" formControlName="cp" />
+        </div>
+        <div class="form-group">
+          <label>{{ "balance" | translate }}</label>
+          <input type="number" formControlName="balance" />
+        </div>
+        <div class="form-group">
+          <label>{{ "locality" | translate }}</label>
+          <input type="text" formControlName="locality" />
+        </div>
+        <div class="form-group">
+          <label>{{ "latitude" | translate }}</label>
+          <input type="number" formControlName="lattitude" />
+        </div>
+        <div class="form-group">
+          <label>{{ "address" | translate }}</label>
+          <input type="text" formControlName="address" />
+        </div>
+        <div class="form-group">
+          <label>{{ "longitude" | translate }}</label>
+          <input type="number" formControlName="longitude" />
+        </div>
+        <div class="atmRow">
+          <ng-template [ngIf]="!noDisponible" [ngIfElse]="notImage">
+            <img (click)="changeImage()" [src]="atmPhoto" />
+          </ng-template>
+          <ng-template #notImage>
+            <div class="image">
+              <img (click)="changeImage()" [src]="notFoundPhoto" class="card-img-top" alt="Image not found" />
+            </div>
+          </ng-template>
         </div>
       </div>
-
-      <div class="row center" style=" border: 2px solid #005540; border-top: none; border-bottom: none;
-          padding-bottom: 2%; height: 120px;">
-        <ng-template [ngIf]="!noDisponible" [ngIfElse]="notImage">
-          <img (click)="changeImage()" [src]="atmPhoto" />
-        </ng-template>
-        <ng-template #notImage>
-          <div class="image">
-            <img (click)="changeImage()" [src]="notFoundPhoto" class="card-img-top" alt="Image not found" />
-          </div>
-        </ng-template>
-      </div>
-
-      <div class="row space" style=" border: 2px solid #005540; border-top: none; padding-bottom: 2%;
-          padding-top: 1%;">
-        <div class="button">
-          <button [disabled]="!this.formCashier.valid || this.updateBtn" class="btn" (click)="createOrUpdateCashier()">
-            {{ "update" | translate }}
-          </button>
-        </div>
-        <div class="button">
-          <button [disabled]="!this.formCashier.valid || this.deleteBtn" class="btn" (click)="deleteCashier()">
-            {{ "delete" | translate }}
-          </button>
-        </div>
-        <div class="button">
-          <button [disabled]="!this.formCashier.valid && 
+      <div class="form-group">
+        <div class="button-container">
+          <button class="btn" [disabled]="!this.formCashier.valid && 
                   (this.formCashier.get('id').value !== null || this.formCashier.get('id').value !== '')
-                  || this.chooseIdFlag" class="btn" (click)="createOrUpdateCashier()">
+                  || this.chooseIdFlag" (click)="createOrUpdateCashier()">
             {{ "new" | translate }}
           </button>
-        </div>
-        <div class="button">
-          <button [disabled]="!this.formCashier.valid" class="btn" (click)="resetForm()">
+          <button class="btn" [disabled]="!this.formCashier.valid || this.updateBtn" (click)="createOrUpdateCashier()">
+            {{ "update" | translate }}
+          </button>
+          <button class="btn" [disabled]="!this.formCashier.valid || this.deleteBtn" (click)="deleteCashier()">
+            {{ "delete" | translate }}
+          </button>
+          <button class="btn" [disabled]="!this.formCashier.valid" (click)="resetForm()">
             {{ "reset" | translate }}
           </button>
         </div>
       </div>
+
     </div>
   </div>
 </form>
