--- a/src/app/components/admin-panel/admin-panel.component.scss
+++ b/src/app/components/admin-panel/admin-panel.component.scss
@@ -5,7 +5,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  //height: 100vh;
   background-color: #f5f5f5;
 }
 
@@ -14,7 +13,7 @@ body {
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    margin-top: 60px;
+    margin-top: 85px;
 }
 
 .admin h2 {
@@ -30,6 +29,7 @@ body {
   justify-content: center;
   align-items: flex-start;
   height: 100%;
+  max-width: 1700px;
 }
 
 .left-section, .right-section {
@@ -101,9 +101,11 @@ form {
 }
 
 .button-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 6px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  grid-gap: 10px;
+  margin-top: 30px;
 }
 
 .btn {
@@ -113,7 +115,6 @@ form {
   background-color: #005540;
   border: none;
   border-radius: 4px;
-  //cursor: pointer;
   margin: 10px;
   width: 110px;
   height: 40px;
@@ -123,7 +124,7 @@ form {
 .form-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 10px;
+  grid-gap: 20px;
 }
 
 .atmRow {
@@ -136,8 +137,8 @@ img {
   padding-left: 0;
   padding-right: 0;
   cursor: pointer;
-  width: 160px;
-  height: 140px;
+  width: 200px;
+  height: 165px;
 }
 
 mat-row:hover {
@@ -152,18 +153,4 @@ mat-row:hover {
 
 .mat-column-id, .mat-column-locality {
   font-size: 15px;
-}
-
-@media (max-width: 767px) {
-  .container {
-    flex-direction: column;
-    align-items: center;
-    //height: auto;
-  }
-
-  .left-section,
-  .right-section {
-    flex: 1 0 auto;
-    margin-bottom: 20px;
-  }
 }
